force-app/main/default/objects/Trailblazer_Event__c/Trailblazer_Event__c.object-meta.xml
<CustomObject>
    <description>An event involving Trailblazers that there are speaking/presenting opportunities at.</description>
    <label>Trailblazer Event</label>
    <nameField>
        <label>Trailblazer Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailblazer Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>