force-app/main/default/objects/Trailblazer_Event__c/fields/Session_Abstract_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Session_Abstract_Max_Length__c</fullName>
    <description>The maximum length of the session abstract for this event.</description>
    <label>Session Abstract Max Length</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>