force-app/main/default/objects/Trailblazer_Event__c/fields/Session_Title_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Session_Title_Max_Length__c</fullName>
    <description>The maximum length of the title of session submissions for this event.</description>
    <label>Session Title Max Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>